Enable building and testing on Java 21 and 25